--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/custom-theme.scss",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/scripts/dragdrop.js"]
           },
           "configurations": {
             "production": {
